tests/snapshots/run_wpt_conformance__trtx_lesser_float32_4D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "lesser.https.any.js",
    "lesser float32 4D tensors",
    "trtx",
    Failed {
        msg: Some(
            "lesser :: lesser float32 4D tensors: index 0: actual=0 expected=1 tolerance=0\n  inputs: inputB: [2.945375680923462, 3.730471611022949, 4.0253753662109375, -4.718355178833008, 6.7732744216918945, -2.042813539505005, -6.526762008666992, 6.826299667358398, -9.267172813415527, 6.118423938751221, -2.001732349395752, 1.779831051826477, 9.660094261169434, -2.7473158836364746, -3.4345006942749023, -4.751097679138184, -6.092621803283691, -0.4334806203842163, -1.4069052934646606, -0.237420991063118, -9.10597038269043, 6.811779975891113, -6.768326759338379, -8.952353477478027]; inputA: [-1.147218942642212, -8.409374237060547, -2.2753310203552246, -0.5770801305770874, 8.171789169311523, -0.907120943069458, 5.2908453941345215, -3.9134645462036137, 9.825095176696776, -8.931730270385742, -3.457401752471924, -7.331232070922852, 1.232004165649414, 4.312077045440674, 1.2715545892715454, 4.184540748596191, -6.710920333862305, 3.0768423080444336, 1.0030865669250488, -9.076244354248049, 8.907161712646484, 4.232614994049072, 2.1005890369415283, -6.201345443725586]\n  expected output: [1, 1, 1, 0, 0, 0, 0, 1, 0, 1 ...] (len=24)\n  actual output: [0, 0, 128, 63, 0, 0, 128, 63, 0, 0 ...] (len=24)\n  expected output full nd:\n[1, 1, 1, 0, 0, 0, 0, 1, 0, 1, ...] (len=24, shape=[2, 2, 2, 3])\n  actual output full nd:\n[0, 0, 128, 63, 0, 0, 128, 63, 0, 0, ...] (len=24, shape=[2, 2, 2, 3])\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    inputA: f32[2, 2, 2, 3];\n    inputB: f32[2, 2, 2, 3];\n  }\n\n  nodes {\n    [output] = lesser(inputA, inputB, label=\"\");\n  }\n\n  outputs { output; }\n}\n",
        ),
    },
)
